<resources>
    <string name="app_name">App De Filmes</string>
    <string name="logo">MM</string>
    <string name="nome_empresa">Maria Movies</string>
    <string name="text_com_melhores_avaliacoes">Com as melhores avaliações</string>
    <string name="text_populares">Filmes Populares</string>
    <string name="text_atuais_no_cinema">Atualmente Nos Cinemas</string>

    <string name="text_minha_lista">Minha Lista</string>

    <string name="text_home">Início</string>
    <string name="text_star">Minha Lista</string>

    <string name="cd_logo_globo_branca">Imagem representando a logo do GloboPlay. Palavra GloboPlay escrito na cor branca</string>
    <string name="cd_usuario">Icone de um boneco representando um usuário</string>
    <string name="cd_imagem_principal">Imagem com diversos dispositivos com tamanho de telas diferentes</string>

    <string name="txt_filme_uncharted">Uncharted: Fora do Mapa</string>
    <string name="txt_sinopse_filme_uncharted">Nathan Drake e seu parceiro canastrão Victor "Sully" Sullivan embarcam em uma perigosa busca para encontrar o maior tesouro jamais encontrado. Enquanto isso, eles também rastreiam pistas que podem levar ao irmão perdido de Nathan.Nathan Drake e seu parceiro canastrão Victor "Sully" Sullivan embarcam em uma perigosa busca para encontrar o maior tesouro jamais encontrado. Enquanto isso, eles também rastreiam pistas que podem levar ao irmão perdido de Nathan.</string>
    <string name="txt_novela">Novela</string>
    <string name="txt_filme">Filme</string>
    <string name="text_tab_first">Assista Também</string>
    <string name="text_tab_second">Detalhes</string>

    <string name="text_titulo_original">Titulo Original:</string>
    <string name="text_genero">Gênero:</string>
    <string name="text_epsodios">Episódios:</string>
    <string name="text_num_epsodios">10</string>
    <string name="ficha_tecnica">Ficha Técnica</string>
    <string name="titulo_ano_produção">Ano de Produção:</string>
    <string name="valor_ano_produção">2021</string>
    <string name="titulo_nome_original">Título Original:</string>
    <string name="valor_nome_original">Uncharted</string>
    <string name="titulo_direcao">Direção:</string>
    <string name="valor_direcao">Ruben Fleischer</string>
    <string name="titulo_elenco">Elenco:</string>
    <string name="valor_elenco">Tom Holland. Personagem : Nathan Drake ; Mark Wahlberg. Personagem : Victor &quot;Sully&quot; Sullivan ; Sophia Ali. Personagem : Chloe Frazer ; Antonio Banderas.</string>
    <string name="titulo_disponivel">Disponível até:</string>
    <string name="valor_disponivel">05/03/2050</string>

    <string name="voltar">Voltar</string>

    <string name="mensagem_dialog">Deseja remover o filme \" %s \" da sua lista de favoritos?</string>
    <string name="negativo_dialog">Cancelar</string>
    <string name="positivo_dialog">Remover</string>
    <string name="titulo_dialog">"Remover Filme "</string>
    <string name="cancelar_dialog">Cancelar</string>

    <string name="text_conta_globo">Conta Globo</string>
    <string name="text_subtitulo_conta_globo">Uma só conta para Goloboplay e todos os produtos Globo</string>
    <string name="text_nao_possui_conta">Não possui conta? <b> CADASTRE-SE. </b></string>
    <string name="text_esqueceu_email">Esqueceu o e-mail?</string>
    <string name="text_esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="text_verificao_de_seguanca">Verificação de seguança</string>
    <string name="text_divider">ou entre com</string>
    <string name="text_faca_login">Faça seu Login</string>
    <string name="text_tenha_ofertas">E tenha ofertas</string>
    <string name="text_ofertas_personalizadas">personalizadas!</string>
    <string name="text_ja_tenho_login">Já tenho um login</string>
    <string name="text_cadastrar_de_graca">Cadastre-se de graça</string>
    <string name="text_criar_mais_tarde">Criar mais tarde</string>

    <string name="hint_nome">Nome</string>
    <string name="hint_data_nascimento">Data de Nascimento</string>
    <string name="hint_genero">Gênero</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_cpf">Cpf</string>

    <string name="text_subtitulo_crear_conta">Crie a sua conta única para todos os produtos Globo</string>

    <string name="text_snack_bar"><b>%s</b> \n<small>Item %s lista</small></string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="text_btn_google">Google</string>
    <string name="text_btn_facebook">Facebook</string>
    <string name="text_btn_enviar_comentario">Enviar comentário</string>
    <string name="text_btn_cadastrar">Cadastrar</string>
    <string name="text_btn_entrar">Entrar</string>
    <string name="text_btn_assistir">Assista</string>
    <string name="text_btn_minha_lista">Minha Lista</string>
    <string name="text_btn_minha_lista_adicionado">Adicionado</string>
    <string name="text_btn_conheca_mais_planos">Conheça mais planos</string>
    <string name="text_btn_seja_assinante">Seja assinante</string>
    <string name="text_btn_assinante">Assinante</string>

    <string name="erro_input_senha">Digite uma senha</string>
    <string name="erro_input_senha_tamanho">Digite uma senha com mínimo 6 dígitos</string>
    <string name="erro_input_email">Digite um email</string>
    <string name="erro_input_email_invalido">E-mail inválido</string>
    <string name="erro_input_cpf">Digite um cpf</string>
    <string name="erro_input_cpf_invalido">CPF inválido</string>
    <string name="erro_input_data">Selecione uma data</string>
    <string name="erro_input_cidade">Digite uma cidade</string>
    <string name="erro_input_genero">Selecione um gênero</string>
    <string name="erro_input_estado">Selecione um estado</string>
    <string name="erro_input_nome">Digite um nome</string>

    <string name="text_menu_configuracoes">Configurações</string>
    <string name="text_menu_perguntas_frequentes">Perguntas Frequentes</string>
    <string name="text_menu_termos_e_politicas">Termos e Políticas</string>
    <string name="text_menu_sobre">Sobre</string>
    <string name="text_menu_sair">Sair</string>

    <string name="text_versao">Versão v3.185.0</string>
    <string name="text_copyright_2020">Copyright 2020</string>
    <string name="text_nome_globo">Globo Comunicação e Participações S. A.</string>

    <string name="text_menu_abrir_app_bar">Abrir App Bar</string>

    <string name="text_entrar">Entrar</string>
    <string name="text_entrar_no_modo_infantil">Entrar no modo infantil</string>
    <string name="text_chip_globoplay">Globoplay</string>
    <string name="text_chip_telecine">Telecine</string>
    <string name="text_crie_sua_lista_de_favoritos">Crie sua lista de favoritos</string>


</resources>