<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_configuracao"
            android:icon="@drawable/ic_configuracao"
            android:title="@string/text_menu_configuracoes"
            android:checked="true" />
        <item
            android:id="@+id/item_perguntas"
            android:icon="@drawable/ic_perguntas"
            android:title="@string/text_menu_perguntas_frequentes" />
        <item
            android:id="@+id/item_termos_politicas"
            android:icon="@drawable/ic_arquivo"
            android:title="@string/text_menu_termos_e_politicas" />
        <item
            android:id="@+id/item_sobre"
            android:icon="@drawable/ic_outline_informacoes"
            android:title="@string/text_menu_sobre" />

        <item
            android:id="@+id/item_sair"
            android:icon="@drawable/ic_logout"
            android:title="@string/text_menu_sair" />

    </group>
</menu>