<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cinza_fundo"
    tools:context=".fragments.PrincipalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cinza_fundo"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/cd_imagem_principal"
            android:scaleType="centerInside"
            android:src="@drawable/img_tela_principal" />

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/text_faca_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/text_tenha_ofertas"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/text_ofertas_personalizadas"
            android:textAllCaps="true"
            android:textColor="@color/vermelho"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_ja_tenho_login" />


        <Button
            android:id="@+id/btn_cadastrar"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/text_cadastrar_de_graca" />


        <Button
            android:id="@+id/btn_criar_mais_tarde"
            style="@style/Widget.App.Button.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/text_criar_mais_tarde" />
    </LinearLayout>
</ScrollView>