<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SobreActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/cinza_escuro">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/text_menu_sobre"
            app:navigationIcon="@drawable/ic_back"
            android:background="@color/black"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:scaleType="fitEnd"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:src="@drawable/globoplay_logo_branco"
        android:contentDescription="@string/cd_logo_globo_branca"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_versao"
        android:gravity="center"
        style="@style/TextAppearance.Material3.BodyLarge"/>

    <Button
        android:id="@+id/btn_enviar_comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:text="@string/text_btn_enviar_comentario"
        android:textColor="@color/cinza_escuro"
        android:textAllCaps="false"
        style="@style/Widget.Material3.Button"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_copyright_2020"
        android:layout_weight="1"
        android:gravity="center|bottom"
        style="@style/TextAppearance.Material3.BodyLarge"/>

    <TextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_gravity="bottom"
        android:gravity="center|bottom"
        android:text="@string/text_nome_globo"
        android:textColor="@color/white" />

</LinearLayout>