<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cinza_fundo"
    tools:context=".activity.PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cinza_fundo"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="313dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/dc_imagem_principal"
            android:scaleType="fitCenter"
            android:src="@drawable/img_tela_principal" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/text_faca_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/text_tenha_ofertas"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/text_ofertas_personalizadas"
            android:textAllCaps="true"
            android:textColor="@color/vermelho"
            android:textStyle="bold" />


        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/vermelho"
            android:padding="14dp"
            android:text="@string/text_ja_tenho_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/vermelho"
            android:padding="14dp"
            android:text="@string/text_cadastrar_de_graca"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="14dp"
            android:text="@string/text_criar_mais_tarde"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>