<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FichaTecnicaFragment"
    android:background="@color/cinza_fundo"
    android:id="@+id/ficha">


    <TextView
        android:id="@+id/tv_ficha_tecnica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ficha_tecnica"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/text_titulo_original"
        android:textColor="@color/cinza_letras"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_genero"
        app:layout_constraintEnd_toStartOf="@id/tv_nome_filme"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/tv_ficha_tecnica"
        app:layout_constraintTop_toBottomOf="@id/tv_ficha_tecnica"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tv_nome_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/txt_filme_uncharted"
        android:textColor="@color/cinza_letras"
        app:layout_constraintBottom_toBottomOf="@id/tv_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/tv_titulo"
        app:layout_constraintTop_toTopOf="@id/tv_titulo"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tv_genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/text_genero"
        android:textColor="@color/cinza_letras"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintEnd_toStartOf="@id/tv_tipo_genero"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_tipo_genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_filme"
        android:textColor="@color/cinza_letras"
        app:layout_constraintBottom_toBottomOf="@id/tv_genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_genero"
        app:layout_constraintTop_toTopOf="@id/tv_genero"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tv_titulo_ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/titulo_ano_produção"
        android:textColor="@color/cinza_letras"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/tv_valor_ano"
        app:layout_constraintStart_toStartOf="@id/tv_genero"
        app:layout_constraintTop_toBottomOf="@id/tv_genero"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_valor_ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/valor_ano_produção"
        android:textColor="@color/cinza_letras"
        app:layout_constraintBottom_toBottomOf="@id/tv_titulo_ano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_titulo_ano"
        app:layout_constraintTop_toTopOf="@id/tv_titulo_ano"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_titulo_nome_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/titulo_nome_original"
        android:textColor="@color/cinza_letras"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/tv_valor_nome_original"
        app:layout_constraintStart_toStartOf="@id/tv_titulo_ano"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_ano"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_valor_nome_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/valor_nome_original"
        android:textColor="@color/cinza_letras"
        app:layout_constraintBottom_toBottomOf="@id/tv_titulo_nome_original"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_titulo_nome_original"
        app:layout_constraintTop_toTopOf="@id/tv_titulo_nome_original"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="50dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>