<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".fragments.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_titulo_conta_globo"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/text_conta_globo"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_subtitulo_conta_globo"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:text="@string/text_subtitulo_conta_globo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_conta_globo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitulo_conta_globo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_esqueceu_email"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/text_esqueceu_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tf_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_senha"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_esqueceu_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_esqueceu_senha"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/text_esqueceu_a_senha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tf_senha" />

            <TextView
                android:id="@+id/tv_verificacao"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_verificao_de_seguanca"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_esqueceu_senha" />


            <Button
                android:id="@+id/btn_entrar"
                style="@style/Widget.App.Button.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_btn_entrar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_verificacao" />

            <TextView
                android:id="@+id/tv_nao_possui_conta"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/text_nao_possui_conta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_entrar" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_esquerda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_texto_divider"
                app:layout_constraintEnd_toStartOf="@id/tv_texto_divider"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_texto_divider" />

            <TextView
                android:id="@+id/tv_texto_divider"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_divider"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/divider_direita"
                app:layout_constraintStart_toEndOf="@id/divider_esquerda"
                app:layout_constraintTop_toBottomOf="@id/tv_nao_possui_conta" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_direita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_texto_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_texto_divider"
                app:layout_constraintTop_toTopOf="@id/tv_texto_divider" />

            <Button
                android:id="@+id/btn_facebook"
                style="@style/Widget.App.Button.Facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="30dp"
                android:text="@string/text_btn_facebook"
                app:icon="@drawable/ic_facebook"
                app:layout_constraintEnd_toStartOf="@id/btn_google"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_texto_divider" />

            <Button
                android:id="@+id/btn_google"
                style="@style/Widget.App.Button.Facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:paddingHorizontal="40dp"
                android:text="@string/text_btn_google"
                app:icon="@drawable/ic_google"
                app:iconSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_facebook"
                app:layout_constraintTop_toBottomOf="@id/tv_texto_divider" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>